<resources>
    <string name="app_name">Youber</string>
    <string name="action_view_requests">View Requests</string>
    <string name="action_profile">Profile</string>
    <string name="action_main">Map View</string>
    <string name="title_activity_request_view">RequestViewActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="dummy_string">(change me)</string>

    <string name="open_request">Open Request</string>
    <string name="accepted_by_drivers">Accepted by driver(s)</string>
    <string name="confirmed_request">Confirmed Request</string>
    <string name="completed_request">Completed Request</string>

    <!--Main Map View-->
    <string name="new_request_btn">New Request</string>
    <string name="start_lat_title">Start Latitude</string>
    <string name="start_lon_title">Start Longitude</string>
    <string name="end_lat_title">End Latitude</string>
    <string name="end_lon_title">End Longitude</string>
    <string name="dlg_create">Create</string>
    <string name="dlg_cancel">Cancel</string>

    <!--Requests List View-->
    <string name="requests_title">Requests</string>

    <string name="message">message</string>
    <string name="positiveInput">postiveInput</string>
    <string name="negativeInput">negativeInput</string>
    <string name="next">Next</string>

    <!--Request Creation Dlg-->
    <string name="fair_fare">Estimated Fair Fare:</string>
    <string name="request_fare">Please enter payment</string>
    <string name="request_desc_title">Please enter a description for the request</string>
    <string name="request_distance">Travel Distance:</string>

    <!--Request View-->
    <string name="request_title">Request</string>
    <string name="start_location_title">Start Location:</string>
    <string name="end_location_title">End Location:</string>
    <string name="status_title">Status:</string>
    <string name="price">Price: $</string>
    <string name="distance">Distance:</string>
    <string name="km">km</string>

    <string name="driver_title">Driver:</string>
    <string name="more_options">More Options</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="view_request_map">View Request On Map</string>
    <string name="promptCancelConfirm">Are you sure you want to cancel this request?</string>
    <string name="driverOfferRide">Are you sure you want to offer a ride?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="youber_email_subject">Youber App:</string>
    <string name="email_body">Please write your email body here.</string>

    <string name="description">Description:</string>

    <!--User Info View-->
    <string name="phone_number_title">Phone Number:</string>
    <string name="email_title">Email:</string>
    <string name="vehicle_make">Vehicle Make:</string>
    <string name="vehicle_model">Vehicle Model:</string>
    <string name="vehicle_year">Vehicle Year:</string>
    <string name="vehicle_colour">Vehicle Colour:</string>

    <string name="InvalidUsernameMessage">This username does not exist. Please try again.</string>
    <string name="usernameExitsMessage">This username already exists. Please try again.</string>

    <string name="validateFieldsMessage">Please fill all required fields.</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="ok">OK</string>
    <string name="EditVehicleInfo">EDIT VEHICLE INFO</string>
    <string name="SaveContactInfo">SAVE CONTACT INFO</string>
    <string name="SaveVehicleInfo">SAVE VEHICLE INFO</string>
    <string name="dlg_accept">Accept Driver</string>
    <string name="dlg_payment">Accept</string>
    <string name="offline_login">Currently offline: cannot login</string>

    <!--Spinner Titles-->
    <string name="FilterTitle">Filter</string>
    <string name="SearchTitle">Search</string>

    <string name="date_of_birth_hint">mm/dd/yyyy</string>
    <string name="phone_num_hint">7801112222</string>
    <string name="email_hint">example@mail.com</string>
>>>>>>> master

</resources>
